<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_500"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/point"
            android:tooltipText="@string/point"
            android:background="@color/purple_200"
            android:layout_margin="1dp"
            android:id="@+id/toolbar_point"
            android:tag="@string/point"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/line"
            android:tooltipText="@string/line"
            android:background="@color/purple_300"
            android:layout_margin="1dp"
            android:id="@+id/toolbar_line"
            android:tag="@string/line"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/rect"
            android:tooltipText="@string/rect"
            android:background="@color/purple_300"
            android:layout_margin="1dp"
            android:id="@+id/toolbar_rect"
            android:tag="@string/rect"
        />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ellipse"
            android:tooltipText="@string/ellipse"
            android:background="@color/purple_300"
            android:layout_margin="1dp"
            android:id="@+id/toolbar_ellipse"
            android:tag="@string/ellipse"
        />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/line_oo"
            android:tooltipText="@string/lineOO"
            android:background="@color/purple_300"
            android:layout_margin="1dp"
            android:id="@+id/toolbar_line_oo"
            android:tag="@string/lineOO"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cube"
            android:tooltipText="@string/cube"
            android:background="@color/purple_300"
            android:layout_margin="1dp"
            android:id="@+id/toolbar_cube"
            android:tag="@string/cube"
            />
    </LinearLayout>





    <LinearLayout
        android:id="@+id/canvas_layout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>